# interesting-experiments

./: README.md  hamming_weight.c
100GBSort/: Makefile  external_sort.c  generate_data.c  merge-test.c  mpz.c  prof_out  read_chunk.c  shared.c  shared.h  shuffle_data.c  thpool.c  thpool.h  verify_data.c
cmap/: driver.c
cpp/: CMakeLists.txt  client.cc  server.cc
filesystemPerf/: pom.xml
filesystemPerf/src/main/java/: Driver.java  FileManager.java  Generator.java  IGenerator.java  WritingMethod.java
